--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
                         <li class="hidden">
                             <a class="page-scroll" href="#page-top"></a>
                         </li>
-                        <li>
+                        <!--<li>
                             <a class="page-scroll" href="#portfolio">Portfolio</a>
-                        </li>
+                        </li>-->
                         <li>
                             <a class="page-scroll" href="#education">Education</a>
                         </li>
                         <li>
-                            <a class="page-scroll" href="#resume">Resume</a>
+                            <a class="page-scroll" href="#resume-section">Resume</a>
                         </li>
                         <li>
                             <a class="page-scroll" href="#contact">Contact</a>
@@ -102,10 +102,15 @@
                         <p>Hello World!</p>
                         <h1>This is Ninel</h1>
                         <div style="text-align: center">
-                            <img src="img/me.jpg" class="img-rounded" alt="Cinque Terre" width="200" height="200">
+                            <img src="img/me.jpg" class="img-rounded" alt="Cinque Terre" width="250" height="250">
                         </div>
                     </div>
                 </div>
+            </div>
+            <div>
+                <a href="https://www.linkedin.com/in/ninel-bejan"><img src="img/LinkedIn1.png"></a>
+                <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
+                <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/ninel-bejan" data-format="inline" data-related="false"></script>
             </div>
         </section>
 
@@ -131,6 +136,17 @@
             </div>
         </section>
 
+        <!-- resume Section -->
+        <section id="resume-section" class="education-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h1>Resume Section</h1>
+                    </div>
+                </div>
+            </div>
+        </section>
+
         <!-- Contact Section -->
         <section id="contact" class="contact-section">
             <div class="container">
@@ -143,14 +159,14 @@
         </section>
 
         <!-- jQuery -->
-        <script src="js/jquery.js"></script>
+        <script src="bootstrap/js/jquery.js"></script>
 
         <!-- Bootstrap Core JavaScript -->
-        <script src="js/bootstrap.min.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
 
         <!-- Scrolling Nav JavaScript -->
-        <script src="js/jquery.easing.min.js"></script>
-        <script src="js/scrolling-nav.js"></script>
+        <script src="bootstrap/js/jquery.easing.min.js"></script>
+        <script src="bootstrap/js/scrolling-nav.js"></script>
         <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.12.0.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
