--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        <h1>Resume Section</h1>
+                        <h1>Resume</h1>
                     </div>
                 </div>
             </div>
