--- a/index.html
+++ b/index.html
@@ -93,22 +93,17 @@
         <section id="intro" class="intro-section">
             <div class="container">
                 <div class="row">
-                    <!--<div class="col-lg-12">-->
-                        <!--<h1>Scrolling Nav</h1>-->
-                        <!--<p><strong>Usage Instructions:</strong> Make sure to include the <code>scrolling-nav.js</code>, <code>jquery.easing.min.js</code>, and <code>scrolling-nav.css</code> files. To make a link smooth scroll to another section on the page, give the link the <code>.page-scroll</code> class and set the link target to a corresponding ID on the page.</p>-->
-                        <!--<a class="btn btn-default page-scroll" href="#about">Click Me to Scroll Down!</a>-->
-                    <!--</div>-->
                     <div style="text-align: center" class="jumbotron">
                         <p>Hello World!</p>
                         <h1>This is Ninel</h1>
                         <div style="text-align: center">
-                            <img src="img/me.jpg" class="img-rounded" alt="Cinque Terre" width="250" height="250">
+                            <img src="resources/img/me.jpg" class="img-rounded" alt="Cinque Terre" width="250" height="250">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <a href="https://www.linkedin.com/in/ninel-bejan"><img src="img/LinkedIn1.png"></a>
+                <a href="https://www.linkedin.com/in/ninel-bejan"><img src="resources/img/LinkedIn1.png"></a>
                 <script src="//platform.linkedin.com/in.js" type="text/javascript"></script>
                 <script type="IN/MemberProfile" data-id="https://www.linkedin.com/in/ninel-bejan" data-format="inline" data-related="false"></script>
             </div>
@@ -144,6 +139,7 @@
                         <h1>Resume</h1>
                     </div>
                 </div>
+                <object class="pdf-object" data="resources/doc/My_Resume.pdf"></object>
             </div>
         </section>
 
